# 3DAlgorithm

./: README.md
CBB3DAlgorithm/: CMakeLists.txt  conanfile.txt
CBB3DAlgorithm/ARAPDeformation/: CMakeLists.txt  hw6.cpp
CBB3DAlgorithm/Dijkstra/: CMakeLists.txt  Dijkstra.cpp  Dijkstra.h
CBB3DAlgorithm/Fitting/: CMakeLists.txt  FittingBase.cpp  FittingBase.h  GeometryTypes.h  GradientBase.cpp  GradientBase.h  TestCase.cpp  TestCase.h  TestCaseGen.cpp  TestCaseGen.h  拟合.pptx
CBB3DAlgorithm/Fitting/chebyshev/: CircleFitter.cpp  CircleFitter.h  CylinderFitter.cpp  CylinderFitter.h  LineFitter.cpp  LineFitter.h  MaxInCircleFitter.cpp  MaxInCircleFitter.h  PlaneFitter.cpp  PlaneFitter.h  SphereFitter.cpp  SphereFitter.h  TestAllCase.cpp  TestAllCase.h  TestCircle.cpp  TestCircle.h  TestCylinder.cpp  TestCylinder.h  TestLine.cpp  TestLine.h  TestPlane.cpp  TestPlane.h  TestSphere.cpp  TestSphere.h
CBB3DAlgorithm/Fitting/chebyshev/chebyshev-testdata/: chebyshev data.txt  chebyshev result.txt  data.docx  rotate.txt
CBB3DAlgorithm/Fitting/chebyshev/chebyshev-testdata/officialtest/answer/: C01.txt  C02.txt  C03.txt  C04.txt  C05.txt  C06.txt  C07.txt  C08.txt  C09.txt  C10.txt  C11.txt  C12.txt  C13.txt  C14.txt  C15.txt  C16.txt  C17.txt  C18.txt  C19.txt  C20.txt  C21.txt  C22.txt  C23.txt  C24.txt  C25.txt  C26.txt  C27.txt  C28.txt  C29.txt  C30.txt  C31.txt  C32.txt  C33.txt  C34.txt  C35.txt  C36.txt  C37.txt  C38.txt  C39.txt  C40.txt  (+10 more)
CBB3DAlgorithm/Fitting/chebyshev/chebyshev-testdata/officialtest/data/: C01.asc  C02.asc  C03.asc  C04.asc  C05.asc  C06.asc  C07.asc  C08.asc  C09.asc  C10.asc  C11.asc  C12.asc  C13.asc  C14.asc  C15.asc  C16.asc  C17.asc  C18.asc  C19.asc  C20.asc  C21.asc  C22.asc  C23.asc  C24.asc  C25.asc  C26.asc  C27.asc  C28.asc  C29.asc  C30.asc  C31.asc  C32.asc  C33.asc  C34.asc  C35.asc  C36.asc  C37.asc  C38.asc  C39.asc  C40.asc  (+11 more)
CBB3DAlgorithm/Fitting/chebyshev/chebyshev-testdata/officialtest/fitting_result/: C01.txt  C02.txt  C03.txt  C04.txt  C05.txt  C06.txt  C07.txt  C08.txt  C09.txt  C10.txt  C11.txt  C12.txt  C13.txt  C14.txt  C15.txt  C16.txt  C17.txt  C18.txt  C19.txt  C20.txt  C21.txt  C22.txt  C23.txt  C24.txt  C25.txt  C26.txt  C27.txt  C28.txt  C29.txt  C30.txt  C31.txt  C32.txt  (+19 more)
CBB3DAlgorithm/Fitting/gauss/: CircleFitter.cpp  CircleFitter.h  ConeFitter.cpp  ConeFitter.h  CylinderFitter.cpp  CylinderFitter.h  FittingCircle2D.cpp  FittingCircle2D.h  FittingLine.cpp  FittingLine.h  FittingLinePCA.cpp  FittingLinePCA.h  FittingPlane.cpp  FittingPlane.h  FittingPlanePCA.cpp  FittingPlanePCA.h  GradientConeFitter.cpp  GradientConeFitter.h  Result.xml  SphereFitter.cpp  SphereFitter.h  TestAllCase.cpp  TestAllCase.h  TestCircle.cpp  TestCircle.h  TestCone.cpp  TestCone.h  TestCylinder.cpp  TestCylinder.h  TestData.xml  TestLine.cpp  TestLine.h  TestPlane.cpp  TestPlane.h  TestSphere.cpp  TestSphere.h
CBB3DAlgorithm/Fitting/gauss/answer/: b01.txt  b02.txt  b03.txt  b04.txt  b05.txt  b06.txt  b07.txt  b08.txt  b09.txt  b10.txt  b11.txt  b12.txt  b13.txt  b14.txt  b15.txt  b16.txt  b17.txt  b18.txt  b19.txt  b20.txt  b21.txt  b22.txt  b23.txt  b24.txt  b25.txt  b26.txt  b27.txt  b28.txt  b29.txt  b30.txt  b31.txt  b32.txt  b33.txt  b34.txt  b35.txt  b36.txt  b37.txt  b38.txt  b39.txt  b40.txt  (+5 more)
CBB3DAlgorithm/Fitting/gauss/data/: b01 - 1.asc  b01.asc  b02.asc  b03.asc  b04.asc  b05.asc  b06.asc  b07.asc  b08.asc  b09.asc  b10.asc  b11.asc  b12.asc  b13.asc  b14.asc  b15.asc  b16.asc  b17.asc  b18.asc  b19.asc  b20.asc  b21.asc  b22.asc  b23.asc  b24.asc  b25.asc  b26.asc  b27.asc  b28.asc  b29.asc  b30.asc  b31.asc  b32.asc  b33.asc  b34.asc  b35.asc  b36.asc  b37.asc  b38.asc  b39.asc  (+5 more)
CBB3DAlgorithm/Fitting/gauss/fitting_result/: b01.txt  b02.txt  b03.txt  b04.txt  b05.txt  b06.txt  b07.txt  b08.txt  b09.txt  b10.txt  b11.txt  b12.txt  b13.txt  b14.txt  b15.txt  b16.txt  b17.txt  b18.txt  b19.txt  b20.txt  b21.txt  b22.txt  b23.txt  b24.txt  b25.txt  b26.txt  b27.txt  b28.txt  b29.txt  b30.txt  b31.txt  b32.txt  b33.txt  b34.txt  b35.txt  b36.txt  b37.txt  b38.txt  b39.txt  b40.txt  (+5 more)
CBB3DAlgorithm/MVCParameterization/: CMakeLists.txt  hw7.cpp  hw7.h  read.txt
CBB3DAlgorithm/coordinate/: CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h  CoordinateSystemTest.cpp  CoordinateSystemTest.h  坐标系建立.pptx
Tests/BasicTest/: CMakeLists.txt
Tests/BasicTest/IOTypeTest/: CMakeLists.txt  ReadExample - 副本.xml  ReadExample.xml  main.cpp  xmlTest.cpp  xmlTest.h
Tests/BasicTest/SimplexTest/: CMakeLists.txt  SimplexTest.cpp  SimplexTest.h  main.cpp  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  测试格式.txt
Tests/BasicTest/project/: CMakeLists.txt  main.cpp  rigidrt.cpp  rigidrt.h
Tests/t1/project/: CMakeLists.txt  main.cpp  rigidrt.cpp  rigidrt.h
applications/: CMakeLists.txt
applications/showModel/: CMakeLists - 1.txt  CMakeLists.txt  PolyMesh.cpp  PolyMesh.h  common.cpp  common.h  conanfile.txt  main.cpp  model.cpp  model.h
commonFunc/BasicTools/: CMakeLists.txt  conanfile.txt
commonFunc/BasicTools/IOType/: PointCloud.cpp
commonFunc/BasicTools/Math/: Geometry.cpp  Simplex.cpp  单纯形.xlsx
commonFunc/BasicTools/OpenMesh/: CMakeLists.txt  conanfile.txt  opentools.cpp  opentools.h
commonFunc/BasicTools/PolyMesh/: CMakeLists.txt  IOManger.cpp  PolyMesh.cpp  vtk.cpp
commonFunc/BasicTools/RapidXML/rapidxml-master/: rapidxml.hpp
commonFunc/BasicTools/include/IOType/: PointCloud.h  point.asc
commonFunc/BasicTools/include/IOType/XML/: rapidxml.hpp  rapidxml_iterators.hpp
commonFunc/BasicTools/include/Math/: Algorithms.h  Geometry.cpp  Geometry.h  MMatrix3.h  Mrgb.h  Simplex.h
commonFunc/BasicTools/include/PolyMesh/: MemoryPool.h  PolyMesh.h  PolyMesh_Base.h
commonFunc/BasicTools/include/VTK/: vtk.h
commonFunc/BasicTools/tests/: GeometryTest.cpp  GeometryTest.h
commonFunc/testPackage/: CMakeLists.txt  funcs.cpp  funcs.h
demos/algTest/: CMakeLists.txt  main.cpp
demos/conan_test/: CMakeLists.txt  tutorial.cpp
demos/dijkstra_test/: CMakeLists.txt  main.cpp
demos/dijkstra_test/dijkstra/: CMakeLists.txt  main.cpp
(+198 files in other folders)
